Fix deprecated Double(double) constructor usage
Replace new Double(2*Math.PI) with Double.valueOf(2*Math.PI) in CircularTreeVisualization.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>